Improve plugin installation and connection reliability for ModForge
Updates build script, installation instructions, and connection test with retries.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 895baa03-324e-4ef8-a584-81c93868c22d
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/5f8eb474-b074-4f79-908a-d445b6dba375/23acd906-7cc8-4e93-8daa-9c4c9a8acce2.jpg